# talentagent

./: .gitignore  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bench/: baseline.json  check_regression.py  match_bench.py
e2e/: match.spec.ts  package-lock.json  package.json  playwright.config.ts
src/talentagent/: __init__.py  agent.py  api.py  confidence.py  corpus.py  metrics.py  models.py  providers.py  ranking.py  search.py  tools.py
tests/: test_agent.py  test_api.py  test_bench.py  test_contract.py  test_metrics.py  test_ranking.py  test_ranking_quality.py  test_review_gate.py  test_search.py  test_tools.py
web/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.test.ts  api.ts  styles.css  types.ts
web/src/components/: MatchCard.test.tsx  MatchCard.tsx  ScoreBar.tsx
