[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "talentagent"
version = "1.0.0"
description = "Goal-oriented candidate-to-role matching agent with explainable, grounded ranking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
talentagent = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=talentagent --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["talentagent"]
mypy_path = "src"
strict = true
warn_unused_configs = true
